# trad-setlist-helper

./: .gitignore  .pre-commit-config.yaml  README.md  bcs-setlist-example.csv  popular.py  pyproject.toml  test_bcs.py  test_cooleys.py  test_liestman.py  the-session-setlist-helper.py
app/: index.html  main.py  pyscript.toml
examples/: popular.py
src/trad_setlist_helper/: __init__.py  html.py
tests/: test_cooleys.py
