[project]
name = "trad-setlist-helper"
authors = [{"name" = "zmoon", email = "zmoon92@gmail.com"}]
dynamic = ["version"]
description = "Convert list of tune sets to setlist with incipits"
license = {"file" = "LICENSE"}
readme = "README.md"
requires-python = "~= 3.11"
dependencies = [
    "pandas",
    "pyabc2",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/trad_setlist_helper/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitignore",
  ".pre-commit-config.yaml",
  "pyproject.toml",
  "/test_*",
  "/*.csv",
  "/app/",
]
# NOTE: .gitignore and pyproject.toml are still getting included in the sdist

[tool.uv]
dev-dependencies = [
    "ipython",
    "mypy",
    "pandas-stubs",
    "pytest",
]
